# IC

./: .gitignore  LICENSE  T1.cpp
T1/P1/: SimpleSample.txt  T1.cpp
T1/P1/T1/: CMakeLists.txt  execution_time.txt  execution_time1.txt
T1/P1/T2/: execution_time3.txt  main.cpp
T1/P1/T3/: main.cpp
T1/P1/T4/: main.cpp
T1/P1/assets/: Sample.txt  SimpleSample.txt
T1/P2/T1/: main.cpp
T1/P2/T2/: CMakeLists.txt
T1/P2/T3/: main.cpp  wav_hist.h
T1/P2/T5/: CMakeLists.txt  main.cpp
T1/P2/sndfile-example-src/: wav_cp
T1/P3/: Dockerfile  README.md  main.cpp
T1/P3/T1/: main.cpp
T1/P3/T2/: main.cpp
T1/P3/T3/: main.cpp
T1/P3/results/: img_gaussian.csv  img_quantization.csv  plots.m
T1/P3/results/plots/airplane/: airplane_gaussian.csv
T1/P3/results/plots/lena/: lena_gaussian.csv  lena_quantization.csv
Trab1/Part1/: T1
proj1/P1/: execution_time.txt
proj1/P1/T1/: CMakeLists.txt  execution_time2.txt  execution_time4.txt  execution_time5.txt  main.cpp  run_benchmarks.sh
proj1/P1/T2/: CMakeLists.txt  execution_time1.txt  execution_time2.txt  execution_time4.txt  main.cpp
proj1/P1/T3/: execution_time.txt  main.cpp
proj1/P1/T4/: execution_time.txt  run_benchmarks.sh
proj1/P2/: README.md
proj1/P2/T2/: main.cpp
proj1/P2/T4/: main.cpp
proj1/P2/sndfile-example-bin/: wav_cp  wav_dct  wav_hist
proj1/P3/: CMakeLists.txt  main.cpp
proj1/P3/results/plots/airplane/: airplane_quantization.csv
proj1/P3/results/plots/bike3/: bike3_gaussian.csv  bike3_quantization.csv
proj2/: AudioCodec.cpp  AudioCodecTest.cpp  BitStream.cpp  BitStream.h  CMakeLists.txt  Dockerfile  GolombCoding.cpp  GolombCoding.h  GolombTest.cpp  ImageCodec.cpp  ImageCodec.h  ImageCodecTest.cpp  README.md  VideoCodec.cpp  VideoCodecIntra.cpp  VideoCodecIntra.h  VideoCodecIntraTest.cpp  VideoLossyCodec.cpp  VideoLossyCodec.h  VideoLossyCodecTest.cpp  decoder.cpp  encoder.cpp
proj2/assets/bit-stream/: decoded2.txt  input.txt  input2.txt
proj2/assets/golomb/: decoded.txt  input.txt
proj2/server/: server.py
proj2/server/templates/: upload.html
proj2/src/: AudioCodec.h  BitStream.cpp  BitStream.h  CMakeLists.txt  GolombCoding.cpp  GolombTest.cpp  ImageCodec.cpp  ImageCodec.h  ImageCodecTest.cpp  VideoCodec.cpp  VideoCodec.h  VideoCodecTest.cpp  decoder.cpp
